Added our first working Javascript game, the psychic game, to our portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,8 +30,10 @@
                 <div id="imagesRow1 clearfix">
 
                     <div class="container imageColumnLeft">
-                        <img src="assets/images/5S_Mass_Transit_Washing_System.jpeg" alt="Double-Decker Bus" class="portfolioImage">
-                        <p class="imageOverlayP">5S Mass Transit Automated Washing System</p>
+                        <img src="assets/images/psychic-lights.jpeg" alt="A Psychic Crystal Ball" class="portfolioImage">
+                        <a href="https://528491.github.io/Psychic-Game/" target="_blank">
+                            <p class="imageOverlayP">Psychic! - A Number-Guessing Game Coded in Plain Vanilla Javascript</p>
+                        </a>
                     </div>
                     
                     <div class="container imageColumnRight">
