Added Ruby image and link to CrystalCollector game

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,8 +37,8 @@
                     </div>
                     
                     <div class="container imageColumnRight">
-                        <img src="assets/images/Bayesian_Neural_Net_Hearing_Loss.jpeg" alt="Headphones" class="portfolioImage">
-                        <p class="imageOverlayP">Bayesian Neural Network Predicting Hearing Loss by Headphone Brand</p>
+                        <img src="assets/images/Ruby.jpg" alt="Headphones" class="portfolioImage">
+                        <p class="imageOverlayP">CrystalsCollector! - A shiner and more numerical variant of the classic hangman game</p>
                     </div>
 
                 </div>
