Link issue fixed

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
                     
                     <div class="container imageColumnRight">
                         <img src="assets/images/Ruby.jpg"  alt="Headphones" class="portfolioImage">
-                        <a href="https://528491.github.io/week-4-game/">
+                        <a href="https://528491.github.io/week-4-game/" target="_blank">
                             <p class="imageOverlayP">CrystalsCollector! - A shiner and more numerical variant of the classic hangman game</p>
                         </a>
                     </div>
