--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
                     </div>
                     
                     <div class="container imageColumnRight">
-                        <img src="assets/images/Ruby.jpg"  alt="Headphones" class="portfolioImage">
+                        <img src="assets/images/Ruby.jpg"  alt="Gemstone" class="portfolioImage">
                         <a href="https://528491.github.io/week-4-game/" target="_blank">
                             <p class="imageOverlayP">CrystalsCollector! - A shiner and more numerical variant of the classic hangman game</p>
                         </a>
