Added train schedule app to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,8 +48,10 @@
                 <div id="imagesRow2 clearfix">
                     
                     <div class="container imageColumnLeft">
-                        <img src="assets/images/Traffic_Simulator.jpeg" alt="Las Vegas Cityscape" class="portfolioImage">
-                        <p class="imageOverlayP">Traffic Simulator</p>
+                        <img src="assets/images/train.jpg" alt="Trains" class="portfolioImage">
+                        <a href="https://528491.github.io/TrainSchedule/" target="_blank">
+                            <p class="imageOverlayP">Train Schedule - Create a train schedule stored in a Firebase backend</p>
+                        </a>
                     </div>
 
                     <div class="containter imageColumnRight">
